fix: adding missing border box on switch (#2291)

--- a/packages/components/src/components/Switch/styles/switch.module.scss
+++ b/packages/components/src/components/Switch/styles/switch.module.scss
@@ -8,6 +8,7 @@
     position: relative;
     background-color: var(--box-neutral-color);
     border: 1px solid var(--line-color-x-strong);
+    box-sizing: border-box;
 
     &:enabled:hover {
         background-color: var(--box-neutral-color-hover);
